---------------------------------------------------------------------------------------------------
Version: 0.5.0
Date: XX.XX.2023
  Features:
    - alien update
  Changes:
    - alien update balance changes
  Bugfixes:
    - fixed gold text plates integration (PR #28)
    - resized beacons and turbines to allow walking past (PR #27)

---------------------------------------------------------------------------------------------------
Version: 0.4.2
Date: 17.06.2023
  Features:
    - integrated new 6x6 containers of EI container mod
    - added new recipes to use benzol and coal gas
    - added integration for Cheese's concentrated solar
  Changes:
    - updated RU locale (PR #18)
    - updated Informatron (PR #19)
---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 18.04.2023
  Changes:
    - removed that iron and copper plates can use productivity to prevent resource positive loops
  Bugfixes:
    - fixed that rocket results return proper amounts of items
    - fixed more lang issues
---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 16.04.2023
  Features:
    - added more descriptions
    - added new recipe to purifier to vent normal water
    - added new recipe to extract water for the air filter and one to vent steam
    - added a setting to turn of beacon overload
    - added advanced centrifuge
    - added productivity to more recipes (steel from oxygen, neodym plates, diesel fuel)
  Changes:
    - added 2 more module slots to purifier
    - added 3 module slots to hyper cooler, added 2 more to air filters
    - locomotive now named diesel locomotive
    - buffed personal nuclear reactor to 1MW
    - each armor tier now only uses 1 of the previous
    - advanced motors require less steel mechanical parts and electronical parts