@@ -3,6 +3,7 @@ Version: 0.5.0
 Date: XX.XX.2023
   Features:
     - alien update
+    - induction matrixes now show current stored capacity (PR #29)
   Changes:
     - alien update balance changes
   Bugfixes:
